--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "lucide-react": "^0.321.0",
+    "next": "^14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.7",
     "swr": "^2.2.5",
-    "ws": "^8.16.0",
-    "date-fns": "^3.3.1",
-    "lucide-react": "^0.321.0"
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
